--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,11 @@
 export("%>%")
 export(get_balance_sheet_statement)
 export(get_cash_flow_statement)
+export(get_company_profile)
+export(get_dividends)
 export(get_historic_prices)
 export(get_income_statement)
+export(get_prices)
+export(get_splits)
 export(get_symbols_list)
 importFrom(magrittr,"%>%")
