current ownership method defined

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,5 @@ export(get_income_statement)
 export(get_prices)
 export(get_splits)
 export(get_symbols_list)
+export(portfolio)
 importFrom(magrittr,"%>%")
