--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,10 @@
 
 export("%>%")
 export(ConnectionHandler)
-export(download_statements)
-export(get_balance_sheet_statement)
-export(get_cash_flow_statement)
-export(get_company_profile)
 export(get_dividends)
-export(get_income_statement)
 export(get_prices)
 export(get_splits)
-export(get_symbols_list)
+export(get_statements)
 export(log_in)
 export(log_out)
-export(portfolio)
 importFrom(magrittr,"%>%")
