improve readme and docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_dividends)
 export(get_prices)
 export(get_splits)
 export(get_statements)
+export(get_tickers)
 export(log_in)
 export(log_out)
 importFrom(magrittr,"%>%")
