--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(ConnectionHandler)
 export(get_dividends)
 export(get_prices)
+export(get_sp500)
 export(get_splits)
 export(get_statements)
 export(get_tickers)
