--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Imports:
     rvest,
     data.table,
     janitor,
-    cli
+    cli,
+    PerformanceAnalytics,
+    utils
 RoxygenNote: 7.1.1
 Suggests: 
     knitr,
