feat: update get_prices to use quantmod

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     cli,
     PerformanceAnalytics,
     utils,
-    zoo
+    zoo,
+    quantmod
 RoxygenNote: 7.1.1
 Suggests: 
     knitr,
